// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FriendsHaveLiked matches snapshot with multiple likes 1`] = `
<div>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="flex"
    >
      <div
        class="relative"
      >
        <div
          class="w-[38px] h-[38px] flex items-center justify-center rounded-full"
          data-state="closed"
          data-testid="avatar-trigger"
        >
          <span
            class="relative flex shrink-0 overflow-hidden rounded-full h-[38px] w-[38px] bg-current border-[3px] border-white dark:border-dark-800"
            data-testid="avatar-wrapper"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full bg-muted"
            >
              JD
            </span>
          </span>
        </div>
      </div>
      <div
        class="relative ml-[-12px]"
      >
        <div
          class="w-[38px] h-[38px] flex items-center justify-center rounded-full"
          data-state="closed"
          data-testid="avatar-trigger"
        >
          <span
            class="relative flex shrink-0 overflow-hidden rounded-full h-[38px] w-[38px] bg-current border-[3px] border-white dark:border-dark-800"
            data-testid="avatar-wrapper"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full bg-muted"
            >
              NS
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col"
    >
      <div
        class="flex items-baseline"
      >
        <a
          class="flex items-center border-none text-2xs hover:bg-transparent hover:text-primary"
          href="/user-profile/johndoe/personal-info"
          title="John Doe"
        >
          John Doe
        </a>
        <label
          class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium text-2xs text-neutral-300"
        >
          , 
        </label>
        <a
          class="flex items-center border-none text-2xs hover:bg-transparent hover:text-primary"
          href="/user-profile/nellyschwartz/personal-info"
          title="Nelly Schwartz"
        >
          Nelly Schwartz
        </a>
      </div>
      <label
        class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium text-neutral-300 text-2xs"
      >
        and 1 more liked this
      </label>
    </div>
  </div>
</div>
`;

exports[`FriendsHaveLiked matches snapshot with no likes 1`] = `<div />`;

exports[`FriendsHaveLiked matches snapshot with single like 1`] = `
<div>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="flex"
    >
      <div
        class="relative"
      >
        <div
          class="w-[38px] h-[38px] flex items-center justify-center rounded-full"
          data-state="closed"
          data-testid="avatar-trigger"
        >
          <span
            class="relative flex shrink-0 overflow-hidden rounded-full h-[38px] w-[38px] bg-current border-[3px] border-white dark:border-dark-800"
            data-testid="avatar-wrapper"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full bg-muted"
            >
              JD
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col"
    >
      <div
        class="flex items-baseline"
      >
        <a
          class="flex items-center border-none text-2xs hover:bg-transparent hover:text-primary"
          href="/user-profile/johndoe/personal-info"
          title="John Doe"
        >
          John Doe
        </a>
        <label
          class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium text-2xs text-neutral-300"
        />
      </div>
      <label
        class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium text-neutral-300 text-2xs"
      >
        liked this
      </label>
    </div>
  </div>
</div>
`;
